[gd_scene load_steps=9 format=3 uid="uid://cdg1k07bmyk3"]

[ext_resource type="Script" uid="uid://bq1l5kvansjop" path="res://scripts/golf_ball.gd" id="1_m66ne"]
[ext_resource type="PackedScene" uid="uid://c0ryf1go6lmf7" path="res://models/ball/ball.gltf" id="2_d73nu"]
[ext_resource type="PackedScene" uid="uid://cj0385qwxkefd" path="res://models/ball/ball_blue.gltf" id="3_0y5jf"]
[ext_resource type="Texture2D" uid="uid://ds85t07fvpvsl" path="res://placeholder_arrow.png" id="3_d73nu"]
[ext_resource type="PackedScene" uid="uid://bquxpqirbveiq" path="res://models/ball/ball_purple.gltf" id="4_ql33v"]
[ext_resource type="PackedScene" uid="uid://dmoimtwmg5qgx" path="res://models/ball/ball_red.gltf" id="5_8veqd"]
[ext_resource type="PackedScene" uid="uid://u1sludfdt6y7" path="res://models/ball/ball_yellow.gltf" id="6_rik4j"]

[sub_resource type="SphereShape3D" id="SphereShape3D_bdpbv"]
radius = 0.13

[node name="GolfBall" type="RigidBody3D" node_paths=PackedStringArray("color_models")]
collision_layer = 8
collision_mask = 5
can_sleep = false
continuous_cd = true
angular_damp = 3.0
script = ExtResource("1_m66ne")
color_models = [NodePath("BallWhite"), NodePath("BallBlue"), NodePath("BallPurple"), NodePath("BallRed"), NodePath("BallYellow")]

[node name="BallWhite" parent="." instance=ExtResource("2_d73nu")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="BallBlue" parent="." instance=ExtResource("3_0y5jf")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
visible = false

[node name="BallPurple" parent="." instance=ExtResource("4_ql33v")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
visible = false

[node name="BallRed" parent="." instance=ExtResource("5_8veqd")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
visible = false

[node name="BallYellow" parent="." instance=ExtResource("6_rik4j")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_bdpbv")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="."]
remote_path = NodePath("../NoRotatePivot")
update_rotation = false
update_scale = false

[node name="NoRotatePivot" type="Node3D" parent="."]
top_level = true

[node name="SpotLight3D" type="SpotLight3D" parent="NoRotatePivot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.0125139, 4.0503, -0.0223432)
light_energy = 50.0
light_indirect_energy = 0.0
light_specular = 0.0
light_cull_mask = 2
distance_fade_begin = 3.0
distance_fade_length = 2.0
spot_range = 10.0
spot_angle = 6.0
spot_angle_attenuation = 0.000211122

[node name="SpotLight3D2" type="SpotLight3D" parent="NoRotatePivot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.0125139, 4.0503, -0.0223432)
light_energy = 50.0
light_indirect_energy = 0.0
light_negative = true
light_specular = 0.0
light_cull_mask = 2
distance_fade_begin = 3.0
distance_fade_length = 2.0
spot_range = 10.0
spot_angle = 5.0
spot_angle_attenuation = 0.000211122

[node name="YRotatePivot" type="Node3D" parent="NoRotatePivot"]

[node name="AimDecal" type="Decal" parent="NoRotatePivot/YRotatePivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15722, -3, 0)
visible = false
sorting_offset = 1000.0
size = Vector3(2, 10, 2)
texture_albedo = ExtResource("3_d73nu")
upper_fade = 6.83374e-05
lower_fade = 9.66436e-05
cull_mask = 2
